# barchGui

./: CMakeLists.txt  Main.qml  compression.cpp  compression.h  imageList.qml  imagelistmodel.cpp  imagelistmodel.h  main.cpp  threading.cpp  threading.h  watcheddirectory.cpp  watcheddirectory.h
